# agentprov

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.github/: release_notes_template.md
.github/workflows/: release.yml
docs/: agent-tool-integrations.md  collector.md  next-steps.md  observability-consumers.md  release-process.md  roadmap.md  trust-semantics.md
docs/schemas/: README.md
docs/spec/: event-v1.md  local-key-v1.md  manifest-v1.md  policy-v1.md  run-envelope-v1.md
examples/: anthropic_wrapper.rs  approval-deny-event.json  approval-grant-event.json  approval-request-event.json  discord_tool_event.rs  github_tool_event.rs  library_api.rs  litellm_wrapper.rs  openai_wrapper.rs  scheduled_run.rs
src/: cli.rs  collector.rs  event.rs  export.rs  integrations.rs  lib.rs  policy.rs  run_log.rs  schema.rs  signing.rs
tests/: cli.rs  collector.rs  library_api.rs  schema.rs
tests/fixtures/imports/: claude.expected.json  claude.jsonl  codex.expected.json  codex.jsonl
