[package]
name = "agentprov"
version = "0.1.0"
edition = "2024"
description = "OpenTelemetry-compatible identity and provenance primitives for AI agent runs"
license = "MIT"
repository = "https://github.com/forjd/agentprov"
readme = "README.md"
keywords = ["ai", "agents", "provenance", "opentelemetry", "audit"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0"
blake3 = "1.5"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
hex = "0.4"
jsonschema = "0.46.5"
rand_core = { version = "0.6", features = ["getrandom"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
uuid = { version = "1.11", features = ["v4", "serde"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.14"
